<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingListActivity">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:onClick="addApple"
                android:text="@string/apple" />

            <Button
                android:id="@+id/button_banana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:onClick="addBanana"
                android:text="@string/banana" />

            <Button
                android:id="@+id/button_kiwi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:onClick="addKiwi"
                android:text="@string/kiwi" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_milk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:onClick="addMilk"
                android:text="@string/milk" />

            <Button
                android:id="@+id/button_juice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:onClick="addJuice"
                android:text="@string/juice" />

            <Button
                android:id="@+id/button_grappa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:onClick="addGrappa"
                android:text="@string/grappa" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:onClick="addCheese"
                android:text="@string/cheese" />

            <Button
                android:id="@+id/button_sausage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:onClick="addSausage"
                android:text="@string/sausage" />

            <Button
                android:id="@+id/button_fish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:onClick="addFish"
                android:text="@string/fish" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>