<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelloActivity">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="@dimen/sp_80"
        app:layout_constraintBottom_toTopOf="@+id/textViewCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello" />

    <Button
        android:id="@+id/button_text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:text="@string/label_text_one"
        android:textSize="@dimen/sp_20"
        android:onClick="clickOne"
        app:layout_constraintBottom_toBottomOf="@+id/button_text_2"
        app:layout_constraintEnd_toStartOf="@+id/button_text_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_text_2" />

    <Button
        android:id="@+id/button_text_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:text="@string/label_text_two"
        android:textSize="@dimen/sp_20"
        android:onClick="clickTwo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_text_3"
        app:layout_constraintStart_toEndOf="@+id/button_text_1"
        app:layout_constraintTop_toBottomOf="@+id/textViewCount"
        app:layout_constraintVertical_bias="0.242" />

    <Button
        android:id="@+id/button_text_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:text="@string/label_text_three"
        android:textSize="@dimen/sp_20"
        android:onClick="clickThree"
        app:layout_constraintBottom_toBottomOf="@+id/button_text_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_text_2"
        app:layout_constraintTop_toTopOf="@+id/button_text_2" />

</androidx.constraintlayout.widget.ConstraintLayout>